--- a/package.json
+++ b/package.json
@@ -24,11 +24,18 @@
         }
     ],
     "dependencies": {
-        "node-red": "0.20.8",
+        "node-red": "0.28.9",
         "node-red-node-msgpack": "*",
         "node-red-node-base64": "*",
         "node-red-node-suncalc": "*",
-        "node-red-node-random": "*"
+        "node-red-node-random": "*",
+	"node-red-contrib-netatmo-dashboard": "*",
+	"node-red-contrib-ttn": "*",
+	"node-red-contrib-wemo-emulator": "*",
+	"node-red-dashboard": "*",
+	"node-red-node-dweetio": "*",
+	"node-red-node-snmp": "*",
+	"node-red-node-twitter": "*"
     },
     "engines": {
         "node": "8.*.*"
